@@ -8,6 +8,8 @@ ChangeLog (IOMETER2 - 2005.mm.dd):
 ==================================
 
 - Applied patches:
+   - #1186297 : iometer-2004.07.30-post.DS1.Ming014ExcludeSwapDevices.patch
+     by Ming Zhang (Prevents swap devices from showing up under Linux).
    - #1184792 : iometer-2004.07.30-post.Daniel002CodeCleanup.patch by
      Daniel Scheibli (Collective patch that brings different minor
      cleanups to logic and coding style).
